[package]
name = "navbar"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.92"

[dependencies.stylist]
version = "0.13.0"
features = ["yew", "yew_integration", "yew_use_style"]

[dependencies.web-sys]
version-sys = "0.3.69"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlInputElement",
    "Window",
]

[dependencies.yew]
version = "0.21"
features = ["csr"]
